# analysis-bank

./: .gitignore  INDEX.md  README.md  SLIDE_MAPPING_NOTES.md  analysis_features.csv  keyword_matrix.csv  pyproject.toml
analysis_bank/: __init__.py  _async.py  curation.py  paths.py  receiver.py  smoke.py
analysis_bank/features/: __init__.py  embeddings.py  feature_dict.md  keyword_index.py  keywords.yaml  registry.py  retrieval.py  scorer.py
analysis_bank/prompts/: inspector_agent.md  receiver_agent.md  scoring_agent.md
procedures/: _index.md
procedures/01_early_bird_sp_investment/: README.md  procedure.sql
procedures/02_going_dark_impact/: README.md  procedure.sql
procedures/03_multi_tactic_synergy/: procedure.sql
procedures/04_ntb_cohort_ltv/: README.md  procedure.sql
procedures/05_co_branded_cross_shop/: README.md  procedure.sql
procedures/06_promo_effectiveness/: procedure.sql
procedures/07_basket_affinity/: procedure.sql
procedures/08_shoppable_display_reach/: README.md
procedures/09_lift_test_incrementality/: README.md
procedures/10_tentpole_strategy/: procedure.sql
procedures/a_20260428_445957/: procedure.sql
procedures/a_20260428_a9b3a9/: README.md
procedures/a_20260428_b0fb24/: README.md
procedures/a_20260428_bfa23f/: README.md
procedures/a_20260428_c4e859/: README.md  procedure.sql
procedures/a_20260428_dc59b1/: README.md
procedures/a_20260428_e30381/: procedure.sql
procedures/a_20260503_c2e602/: README.md  adapted_tactic_combo_ntb_conversion.csv  chart.py  embeddings.npy  procedure.sql  questions.json
scripts/: backfill_existing_procedures.py  build_keyword_matrix.py
tests/: conftest.py  test_features.py  test_feedback_loop.py  test_receiver.py
(+35 files in other folders)
